==================== 2.25.90 ====================

2009-01-28  Luca Ferretti  <elle.uca@libero.it>

	reviewed by: Jens Granseuer

	* data/appearance.glade:
	* gnome-wp-info.c: (gnome_wp_info_new): Use "Desktop Background"
	instead "Wallpaper" as per GDP glossary (Fixes bug #569382)	

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	* Makefile.am:
	* gnome-wp-info.h:
	* gnome-wp-item.h: define GNOME_DESKTOP_USE_UNSTABLE_API in Makefile
	instead of individual headers

2009-01-25  Jens Granseuer  <jensgr@gmx.net>

	Fix newly installed themes appearing twice in the GTK themes list if
	the package contains themes for both GTK and metacity (bug #568595)

	* appearance-style.c: (changed_on_disk_cb): check the new
	GnomeThemeElement parameter instead of the theme properties to
	determine what part of the theme changed
	* appearance-themes.c: (theme_changed_on_disk_cb): use new callback
	signature

==================== 2.25.3 ====================
==================== 2.25.2 ====================

2008-11-29  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (file_theme_type): don't leak the filename

2008-11-27  Jens Granseuer  <jensgr@gmx.net>

	* theme-installer.c: (transfer_cancel_cb): really remove the
	temporary directory when the transfer is cancelled

2008-11-20  Jens Granseuer  <jensgr@gmx.net>

	Patch by: Maxim Ermilov <zaspire@rambler.ru>

	* gnome-wp-xml.c: (gnome_wp_xml_get_bool): use g_ascii_strcasecmp
	instead of the deprecated g_strcasecmp (bug #560424)

2008-11-09  Kjartan Maraas  <kmaraas@gnome.org>

	* appearance-main.c: (init_appearance_data):
	Add missing argument to capplet_init().

2008-11-08  Jens Granseuer  <jensgr@gmx.net>

	* appearance-main.c: (init_appearance_data), (main): don't
	initialize gettext and gtk twice

==================== 2.25.1 ====================

Sat Oct 25 23:11:58 2008  Søren Sandmann  <sandmann@redhat.com>

	* appearance.h: Don't define GNOME_DESKTOP_USE_UNSTABLE_API
