@@ -1,3 +1,8 @@
+2009-02-19  Jens Granseuer  <jensgr@gmx.net>
+
+	* theme-installer.c: (gnome_theme_install_real): fix message markup
+	appearing in dialog (bug #572453)
+
 ==================== 2.25.90 ====================
 
 2009-01-28  Luca Ferretti  <elle.uca@libero.it>
